# ADSBtoCOT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
src/: adsb_core.cpp  adsb_core.h  gui_main.cpp  main.cpp
